Mise à jour configuration travis

--- a/twitcomet-java/app/views/index.scala.html
+++ b/twitcomet-java/app/views/index.scala.html
@@ -4,4 +4,7 @@
     
     Hello
     
+    <a href="#">Charger 20 derniers tweets</a>
+    <a href="#">Charger 20 derniers tweets depuis le tweet numéro X
+    
 }
