--- a/twitcomet-java/app/views/index.scala.html
+++ b/twitcomet-java/app/views/index.scala.html
@@ -1,10 +1,27 @@
-@(message: String)
+@(messages: List[Message], lastIdMessage: Long)
 
-@main("Welcome to Play 2.0") {
+@main("Welcome to Twit'Comet") {
+
+		
+<pre id="debug"><strong>Debug</strong>
+Dernier ID : <span id="lastId">@lastIdMessage</span>
+</pre>
+	
+    <a href="#" class="btn">Charger 20 derniers tweets</a>
+    <a href="#" class="btn">Charger 20 derniers tweets depuis le tweet numéro X</a><br /><br />
     
-    Hello
-    
-    <a href="#">Charger 20 derniers tweets</a>
-    <a href="#">Charger 20 derniers tweets depuis le tweet numéro X
-    
+	<div id="timeline">
+		@for(message <- messages) {
+			<div class="message well" data-id="@message.id">
+				<p><a href="#" class="auteur">@message.author.firstname @message.author.lastname</a> <span class="login">@@@message.author.login</span></p>
+				<p class="txt">@message.text</p>
+				@if(message.reference != null) {
+					<p class="ref">En réponse au message <a href="#">#@message.reference.id</a></p>
+				}
+				<p class="info">Par <a href="#">@message.author.login</a> le <a href="#" class="date">@message.getDateFr()</a></p>
+			</div>
+		}
+	</div>
+	
+
 }
