--- a/twitcomet-java/app/views/main.scala.html
+++ b/twitcomet-java/app/views/main.scala.html
@@ -8,6 +8,7 @@
     <meta name="author" content="" />
 
     <link href="@routes.Assets.at("stylesheets/bootstrap.css")" rel="stylesheet" />
+    <link href="@routes.Assets.at("stylesheets/styles.css")" rel="stylesheet" />
     <style>
       body { padding-top: 60px; }
     </style>
@@ -43,13 +44,26 @@
     </div>
 
     <div class="container">
-
-      @content
+		
+		@content
 
     </div>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script>window.jQuery || document.write("<script src='@routes.Assets.at("javascripts/jquery-1.7.1.min.js")'>\x3C/script>")</script>
+
+	<script src="@routes.Assets.at("javascripts/moment.js")"></script>
+	<script>moment.lang('fr');</script>
+	
+	<script>
+	$(function() {
+		/*$('.date').each(function() {
+			var depuis = moment($(this).text(), "DD/MM/YYYY HH:mm:ss").fromNow();
+			$(this).append(' ('+depuis+')');
+		});*/
+	});
+	
+	</script>
 
   </body>
 </html>
