--- a/twitcomet-java/app/views/main.scala.html
+++ b/twitcomet-java/app/views/main.scala.html
@@ -7,63 +7,23 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <link href="@routes.Assets.at("stylesheets/bootstrap.css")" rel="stylesheet" />
-    <link href="@routes.Assets.at("stylesheets/styles.css")" rel="stylesheet" />
-    <style>
-      body { padding-top: 60px; }
-    </style>
-
-    <!--[if lt IE 9]>
-      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")" />
+    @slots.header()
+    
   </head>
 
   <body>
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Twit'Comet</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+	@slots.menu()
 
     <div class="container">
-		
+    	
+    	@slots.status()
+    	
 		@content
 
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script>window.jQuery || document.write("<script src='@routes.Assets.at("javascripts/jquery-1.7.1.min.js")'>\x3C/script>")</script>
-
-	<script src="@routes.Assets.at("javascripts/moment.js")"></script>
-	<script>moment.lang('fr');</script>
-	
-	<script>
-	$(function() {
-		/*$('.date').each(function() {
-			var depuis = moment($(this).text(), "DD/MM/YYYY HH:mm:ss").fromNow();
-			$(this).append(' ('+depuis+')');
-		});*/
-	});
-	
-	</script>
+    @slots.footer()
 
   </body>
 </html>
