--- a/twitcomet-java/app/views/slots/menu.scala.html
+++ b/twitcomet-java/app/views/slots/menu.scala.html
@@ -5,8 +5,8 @@
 			</a> <a class="brand" href="#">Twit'Comet</a>
 			<div class="nav-collapse">
 				<ul class="nav">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#about">About</a></li>
+					<li class="active"><a href="#">Wall</a></li>
+					<li><a href="@routes.Register.index()">Register</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 				
