--- a/twitcomet-java/app/views/main.scala.html
+++ b/twitcomet-java/app/views/main.scala.html
@@ -16,15 +16,12 @@
 
 	@slots.menu()
 
-    <div class="container">
-    	
-    	@slots.status()
-    	
+    <div id="main" class="container">
 		@content
-
     </div>
 
     @slots.footer()
+   	@slots.status()
 
   </body>
 </html>
