Bug fix for error status

--- a/twitcomet-java/app/views/slots/status.scala.html
+++ b/twitcomet-java/app/views/slots/status.scala.html
@@ -3,5 +3,5 @@
 }
 
 @if(flash.contains("error")) {
-	<script>$(function() { showError("@flash.get("success")"); });</script>
+	<script>$(function() { showError("@flash.get("error")"); });</script>
 }
