--- a/twitcomet-java/app/views/main.scala.html
+++ b/twitcomet-java/app/views/main.scala.html
@@ -23,5 +23,7 @@
     @slots.footer()
    	@slots.status()
 
+    <iframe class="hide" src="@routes.LiveWall.index.unique"></iframe>
+    
   </body>
 </html>
