migrated to play 2.2.1

--- a/twitcomet-java/app/views/index.scala.html
+++ b/twitcomet-java/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(messages: List[Message], lastIdMessage: Long)
+@(messages: List[Message], lastIdMessage: Long)(implicit session: play.mvc.Http.Session, flash: play.mvc.Http.Flash)
 
 @main("Welcome to Twit'Comet") {
 
