--- a/twitcomet-java/app/views/main.scala.html
+++ b/twitcomet-java/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit session: play.mvc.Http.Session, flash: play.mvc.Http.Flash)
 
 <!DOCTYPE html>
 <html lang="fr">
