--- a/twitcomet-java/app/views/slots/menu.scala.html
+++ b/twitcomet-java/app/views/slots/menu.scala.html
@@ -1,3 +1,4 @@
+@()(implicit session: play.mvc.Http.Session)
 <div class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
