--- a/twitcomet-java/app/views/wall/sendMessageZone.scala.html
+++ b/twitcomet-java/app/views/wall/sendMessageZone.scala.html
@@ -1,3 +1,4 @@
+@()(implicit session: play.mvc.Http.Session) 
 @if(session.get("user.id") != null) {
 	<div id="post-zone" class="row">
 		<div class="span6 offset3 well">
